fixed portval for holdings and also added Net Cash Flow to history

--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -14,7 +14,7 @@
 
 
         <h1 class="text-center my-3">History</h1>
-        <p id="">Cash Flow: {{portVal}}</p>
+        <p id="">Net Cash Flow: {{portVal}}</p>
         <table class="table my-2">
             <thead id="history-head" class="thead-primary">
                 <tr>
