--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -12,9 +12,9 @@
     <div class="container mx-auto">
         <a href="/dashboard"><button style='width: 150px; height:20%' class="btn mx-2 my-1 btn-transparent text-center dash-button">Dashboard</button></a>
 
-   
+
         <h1 class="text-center my-3">Holdings</h1>
-        <p id="">Portfolio Value: {{portVal}}</p>
+        <p id="port-val">Portfolio Value: {{portVal}}</p>
         <table class="table my-2">
             <thead class="thead-primary">
                 <tr>
@@ -23,23 +23,23 @@
                     <th scope="col" class=" ">Price Acquired</th>
                     <th scope="col" class=" ">Market Price</th>
                     <th scope="col" class=" ">Delta</th>
-                    <th scope="col" class=" ">Quantity</th> 
+                    <th scope="col" class=" ">Quantity</th>
                     <th scope="col" class=" ">Trade Date</th>
                     <th scope="col" class=" ">iD</th>
                 </tr>
             </thead>
             <tbody>
                 {{#each holdings}}
-                    <tr>
-                        <td>{{this.ticker}}</td>
-                        <td>{{this.description}}</td>
-                        <td>{{this.price_acquired}}</td>
-                        <td>Work in progress</td>
-                        <td>Work in progress</td>
-                        <td>{{this.quantity}}</td>
-                        <td>{{this.date_acquired}}</td>
-                        <td>{{this.id}}</td>
-                    </tr>
+                <tr>
+                    <td>{{this.ticker}}</td>
+                    <td>{{this.description}}</td>
+                    <td>{{this.price_acquired}}</td>
+                    <td>Work in progress</td>
+                    <td>Work in progress</td>
+                    <td>{{this.quantity}}</td>
+                    <td>{{this.date_acquired}}</td>
+                    <td>{{this.id}}</td>
+                </tr>
                 {{/each}}
             </tbody>
         </table>
@@ -47,22 +47,41 @@
 
 
 
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous"></script>
+
+
     <script type="text/javascript">
 
-      const numFormat = num => {
+        const numFormat = num => {
 
             return '$' + num.toFixed(2).replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,')
         }
 
-        {{!-- $(document).ready(() => {
-          $.ajax({
-              type: "GET",
-              contentType: "application/json",
-              url: "http://localhost:3000/:user_name/holdings",
-              
-          })  
-        }) --}}
-    </script>   
+        let portVal = 0;
+
+        $(document).ready(() => {
+
+            $.ajax({
+                type: "POST",
+                contentType: "application/json",
+                url: "http://localhost:3000/portval"
+            }).then(results => {
+                console.log(results);
+                results.forEach(holding => portVal += (holding.price_acquired * holding.quantity));
+                $("#port-val").html(`<p>Portfolio Value: ${numFormat(portVal)}</p>`);
+            })
+        })
+    </script>
 </body>
 
 
