--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -33,9 +33,10 @@
             <a href="/leaders"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-danger text-center dash-button">Leadersboard</button></a>
         </div>
 
-        <div class="row text-center">
-            <button id='logout' style='width: 150px; height:100px' class="btn mx-2 my-5 btn-transparent mx-auto">Ninja
-                Out</button>
+        <div class="text-center">
+            <a href="/contact"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-transparent text-center dash-button">Contact Us</button></a>
+
+            <button id='logout' style='width: 150px; height:100px' class="btn mx-2 my-5 btn-transparent mx-auto">Ninja Out</button>
         </div>
            
 
