--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -90,11 +90,12 @@
     }
 
     #leaders {
-        background-color: rgb(204, 68, 75) !important;
+      
+        background-color: darkred !important ;
     }
 
     tbody {
-       
+        border:  solid white;
         color: white 
     }
 
