--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/login">Login</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/contact">Contact Us</a>
+                    </li>
                 </ul>
             </div>
         </nav>
