--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -33,29 +33,20 @@
                 </ul>
             </div>
         </nav>
-    </div>
+        <h1 class="my-5 mx-auto text-center h1">Contact Us</h1>
+        <p>Please call 888-524-6000.</p>
 
+        <div class="container">
 
+            <div id="alert-space">
 
-    <h1 class="my-5 mx-auto text-center">Login to begin</h1>
-
-    <div class="container col-4">
-        <form id="login">
-            <div class="form-group">
-                <label for='username'>Username</label>
-                <input type="text" class="form-control" id="username">
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password">
-            </div>
-            <button style="width: 100%" id='submit' type="submit" class="btn btn-primary my-4">Ninja Log</button>
-        </form>
-
-        <div id="alert-space" class="text-center my-3">
-
         </div>
+
     </div>
+
+
+
 
 
 
@@ -71,51 +62,6 @@
 
     <script type='text/javascript'>
 
-        $("#submit").on("click", event => {
-            event.preventDefault();
-            let userName = $("#username").val();
-            let userPassword = $("#password").val();
-
-
-            let data = {
-                username: userName,
-                password: userPassword
-            }
-
-
-            $.ajax({
-                type: "POST",
-                contentType: "application/json",
-                url: "http://localhost:3000/auth",
-                data: JSON.stringify(data)
-
-            }).then((results) => {
-                console.log(results)
-
-                if (results === "Username does not exist") {
-                    $("#alert-space").html(`<div class="alert alert-transparent text-warning" role="alert">Please enter a valid username.</div>`);
-                    setTimeout(() => {
-                        $("#alert-space").empty();
-                    }, 3000);
-                }
-
-                if (results === "Invalid credentials!") {
-                    $("#alert-space").html(`<div class="alert alert-transparent text-danger" role="alert">${results}</div>`);
-                    setTimeout(() => {
-                        $("#alert-space").empty();
-                    }, 3000);
-                }
-
-                if (results === "Login Successful!") {
-                  
-                    $("#alert-space").html(`<div class="spinner-border text-danger" role="status"><span class="sr-only"></span></div>`)
-                    setTimeout(() => {
-                        window.location = "/dashboard"
-                    }, 3000);
-                }
-
-            })
-        })
 
     </script>
 </body>
