fixed issue with backend axios call for market price, need to use data tables library

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -99,6 +99,11 @@
         color: white 
     }
 
+    #market-value:hover {
+        background-color: rgb(68, 156, 87);
+        
+    }
+
 </style>
 
 <body style="font-family: 'Stylish', sans-serif;">
