--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -16,6 +16,7 @@
     <div class="container mx-auto">
         <div class="row ml-auto">
             <a class="navbar-brand" href="/login">Trade Ninja</a>
+            <p>{{date}}</p>
         </div>
        
 
@@ -33,10 +34,10 @@
             <a href="/leaders"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-danger text-center dash-button">Leadersboard</button></a>
         </div>
 
-        <div class="text-center">
+        <div class="text-center my-5">
             <a href="/contact"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-transparent text-center dash-button">Contact Us</button></a>
 
-            <button id='logout' style='width: 150px; height:100px' class="btn mx-2 my-5 btn-transparent mx-auto">Ninja Out</button>
+            <button id='logout' style='width: 150px; height:100px' class="btn my-1 btn-transparent mx-2">Ninja Out</button>
         </div>
            
 
