added datables.net library, need to add password reset and format columns

--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -15,8 +15,8 @@
 
         <h1 class="text-center my-3">History</h1>
         <p id="">Net Cash Flow: {{portVal}}</p>
-        <table class="table my-2">
-            <thead id="history-head" class="thead-primary">
+        <table id='myTable'class="display table-striped">
+            <thead id="history-head" class="bg-secondary">
                 <tr>
                     <th scope="col" class=" ">Ticker</th>
                     <th scope="col" class=" ">Description</th>
