--- a/views/leaders.handlebars
+++ b/views/leaders.handlebars
@@ -10,11 +10,12 @@
 
 <body>
     <div class="container">
-        <a href="/dashboard"><button style='width: 150px; height:20%' class="btn mx-2 my-1 btn-transparent text-center dash-button">Dashboard</button></a>
+        <a href="/dashboard"><button style='width: 150px; height:20%'
+                class="btn mx-2 my-1 btn-transparent text-center dash-button">Dashboard</button></a>
         <h1 class="h5 my-5">Let's see how {{userName}} compares to other Ninja Activity</h1>
-        <p class="h4 my-3">Top Ninjas by Buys</p>
-        <table class="table my-3">
-            <thead id='leaders' class="thead-primary">
+        <p class="h4 my-3 text-primary">Top Ninjas by Buys</p>
+        <table id='' class="display table-striped  my-5">
+            <thead class="bg-primary">
                 <tr>
                     <th scope="col">Ninja</th>
                     <th scope="col">Buys</th>
@@ -33,9 +34,9 @@
             </tbody>
         </table>
 
-        <p class="h4 my-3">Top Ninjas by Sells</p>
-        <table class="table my-3">
-            <thead id='leaders' class="thead-primary">
+        <p class="h4 my-3 text-warning">Top Ninjas by Sells</p>
+        <table id='' class="display table-striped  my-5">
+            <thead class="bg-warning">
                 <tr>
                     <th scope="col">Ninja</th>
                     <th scope="col">Sells</th>
@@ -55,21 +56,21 @@
             </tbody>
         </table>
 
-        <p class="h4 my-3">Top Tickers by Buys</p>
-        <table class="table my-3">
-            <thead id='leaders' class="thead-primary">
+        <p class="h4 my-3 text-danger">Top Tickers by Buys</p>
+        <table id='' class="display table-striped  my-5">
+            <thead class="bg-danger">
                 <tr>
                     <th scope="col">Ticker</th>
                     <th scope="col">Buys</th>
                     <th scope="col">Total</th>
-                    
+
 
                 </tr>
             </thead>
             <tbody>
                 {{#each ticker_buys}}
                 <tr>
-                
+
                     <td>{{this.ticker}}</td>
                     <td>{{this.count}}</td>
                     <td>{{this.total}}</td>
@@ -80,9 +81,9 @@
             </tbody>
         </table>
 
-        <p class="h4 my-3">Top Tickers by Sells</p>
-        <table class="table border">
-            <thead id='leaders' class="thead-primary">
+        <p class="h4 my-3 text-secondary">Top Tickers by Sells</p>
+        <table id='' class="display table-striped  my-5">
+            <thead class="bg-secondary">
                 <tr>
                     <th scope="col">Ticker</th>
                     <th scope="col">Sells</th>
@@ -96,7 +97,7 @@
                     <td>{{this.ticker}}</td>
                     <td>{{this.count}}</td>
                     <td>{{this.total}}</td>
-                    
+
                 </tr>
                 {{/each}}
             </tbody>
