added a password reset path

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -97,6 +97,21 @@
         font-family: 'Press Start 2P', cursive;
     }
 
+    .reset {
+        font-size: 12px;
+        color: gray !important;
+        text-decoration: none !important;
+    }
+
+    .reset:hover {
+        color: dodgerblue !important;
+       
+    }
+
+   table {
+       text-align: left !important;
+   }
+
 </style>
 
 <body style="font-family: 'Stylish', sans-serif;">
