--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -49,6 +49,10 @@
                 <label for="password">Password</label>
                 <input type="password" class="form-control" id="password">
             </div>
+            <div class="containter">
+                <a class='reset float-left'href="./forget_username">Forgot Username?</a>
+                <a class='reset float-right' href="./forget_password">Password Reset</a>
+            </div>
             <button style="width: 100%" id='submit' type="submit" class="btn btn-primary my-4">Ninja Log</button>
         </form>
 
