--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -25,12 +25,12 @@
 
 
         <div class=" text-center my-3">
-            <a href="https://www.cnbc.com"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-info text-center dash-button">News</button></a>
-            <a href="/portfolio"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-primary text-center dash-button">Portfolio</button></a>
-            <a href="/history"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-secondary text-center dash-button">History</button></a>
-            <a href="/cash"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-warning text-center dash-button">Cash</button></a>
-            <a href="/trade"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-dark text-center dash-button">Ninja Trade</button></a>
-            <a href="/leaders"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-danger text-center dash-button">Leadersboard</button></a>
+            <a href="https://www.cnbc.com"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-info text-center dash-button shadow-lg">News</button></a>
+            <a href="/portfolio"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-primary text-center dash-button shadow-lg">Portfolio</button></a>
+            <a href="/history"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-secondary text-center dash-button shadow-lg">History</button></a>
+            <a href="/cash"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-warning text-center dash-button shadow-lg">Cash</button></a>
+            <a href="/trade"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-dark text-center dash-button shadow-lg">Ninja Trade</button></a>
+            <a href="/leaders"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-danger text-center dash-button shadow-lg">Leadersboard</button></a>
         </div>
 
         <div class="text-center my-5">
