--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -15,9 +15,10 @@
 
         <h1 class="text-center my-3">Holdings</h1>
         <p id="port-val">Portfolio Value: {{portVal}}</p>
+        <div id='port-delta'></div>
         <button id="market-value" style='width: 150px; height:20%' class="btn float-right my-1 btn-transparent text-center dash-button">Analyze</button>
 
-        <table id=''class="display table-striped">
+        <table id='' class="display table-striped">
             <thead class="bg-primary">
                 <tr>
                     <th scope="col" class=" ">Ticker</th>
@@ -32,7 +33,6 @@
                 <tr>
                     <td>{{this.ticker}}</td>
                     <td>{{this.description}}</td>
-                  
                     <td>{{this.quantity}}</td>
                     <td>{{this.date_acquired}}</td>
                     <td>{{this.id}}</td>
@@ -42,7 +42,7 @@
         </table>
 
         <div id="alert-space" class="text-center my-3">
-        
+
         </div>
     </div>
 
@@ -69,6 +69,8 @@
         }
 
         let portVal = 0;
+        let oldBal = 0;
+
 
         $(document).ready(() => {
 
@@ -80,11 +82,15 @@
                 console.log(results);
                 results.forEach(holding => portVal += (holding.price_acquired * holding.quantity));
                 $("#port-val").html(`<p>Portfolio Value: ${numFormat(portVal)}</p>`);
+                oldBal = portVal;
+                console.log(oldBal)
             })
+
         })
 
         $(document).on("click", "#market-value", event => {
             event.preventDefault();
+            console.log("old:" + " " + oldBal);
             $("table").empty();
             $("table").removeClass("table-striped")
             $("#alert-space").html(`<div class="spinner-border text-danger" role="status"><span class="sr-only"></span></div>`)
@@ -94,6 +100,12 @@
                 contentType: "application/json",
                 url: "http://localhost:3000/refresh"
             }).then(results => {
+                let newBal = 0;
+                console.log(results)
+                results.forEach(holding => newBal += (parseFloat(holding.market_price) * parseInt(holding.quantity)));
+
+
+
                 $("#alert-space").empty();
                 $("table").removeClass("table-striped");
                 $("table").append(`
@@ -122,7 +134,7 @@
                             <td>${ticker.description}</td>
                             <td>${ticker.price_acquired}</td>
                             <td>${ticker.market_price}</td>
-                            <td>${ticker.delta.toFixed(2)}</td>
+                            <td>${deltaColor(ticker.delta.toFixed(2))}</td>
                             <td>${ticker.recommend}</td>
                             <td>${ticker.quantity}</td>
                             <td>${ticker.trade_date}</td>
@@ -131,13 +143,44 @@
                     
                     `)
                 })
+
+                switch (true) {
+                    case newBal < parseInt(oldBal):
+                        $("#port-delta").html(`<p class='text-danger float-left'>Down by $${formatNumber(newBal - parseInt(oldBal))}</p>`);
+                        break;
+                    case newBal > parseInt(oldBal):
+                        $("#port-delta").html(`<p class='text-success float-left'>Up by $${formatNumber(newBal - parseInt(oldBal))}</p>`);
+                        break;
+                    case newBal === parseInt(oldBal):
+                        $("#port-delta").html(`<p class='text-warning float-left'>No change</p>`);
+                        break;
+                }
+
+
+
             })
+
+
 
         });
 
         function formatNumber(num) {
-                return num.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,')
+            return num.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,')
+        }
+
+        const deltaColor = num => {
+            if (num > 0) {
+                return num.fontcolor("green");
             }
+
+            if (num < 0) {
+                return num.fontcolor("red");
+            }
+
+
+            return num.fontcolor("black");
+
+        }
 
     </script>
 </body>
