changed ajax url on the frontend  install cors

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -62,7 +62,7 @@
             $.ajax({
                 type: "POST",
                 contentType: "application/json",
-                url: "http://localhost:3000/logout"
+                url: "https://trade-ninja-9505.nodechef.com/logout"
             }).then(results => {
                 console.log(results);
 
