--- a/views/forget_password.handlebars
+++ b/views/forget_password.handlebars
@@ -85,7 +85,7 @@
             $.ajax({
                 type: "POST",
                 contentType: "application/json",
-                url: "http://localhost:3000/forget_password",
+                url: "https://trade-ninja-9505.nodechef.com/forget_password",
                 data: JSON.stringify(data)
 
             }).then((results) => {
