--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -68,7 +68,7 @@
             $.ajax({
                 type: "GET",
                 contentType: "application/json",
-                url: "http://localhost:3000/:user_name/holdings"
+                url: "https://trade-ninja-9505.nodechef.com/:user_name/holdings"
 
             })
         }) --}}
