--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -90,7 +90,7 @@
             $.ajax({
                 type: "POST",
                 contentType: "application/json",
-                url: "http://localhost:3000/auth",
+                url: "https://trade-ninja-9505.nodechef.com/auth",
                 data: JSON.stringify(data)
 
             }).then((results) => {
