--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -125,7 +125,7 @@
                 $.ajax({
                     type: "POST",
                     contentType: "application/json",
-                    url: "http://localhost:3000/users/email",
+                    url: "https://trade-ninja-9505.nodechef.com/users/email",
                     data: JSON.stringify(data)
                 }).then((results) => {
 
@@ -162,7 +162,7 @@
                 $.ajax({
                     type: "POST",
                     contentType: "application/json",
-                    url: "http://localhost:3000/users/username",
+                    url: "https://trade-ninja-9505.nodechef.com/users/username",
                     data: JSON.stringify(data)
                 }).then((results) => {
 
@@ -211,7 +211,7 @@
                 $.ajax({
                     type: "POST",
                     contentType: "application/json",
-                    url: "http://localhost:3000/users",
+                    url: "https://trade-ninja-9505.nodechef.com/users",
                     data: JSON.stringify(user)
 
                 }).then((err, results) => {
