--- a/views/reset.handlebars
+++ b/views/reset.handlebars
@@ -94,7 +94,7 @@
             $.ajax({
                 type: "POST",
                 contentType: "application/json",
-                url: "http://localhost:3000/change_password",
+                url: "https://trade-ninja-9505.nodechef.com/change_password",
                 data: JSON.stringify(data)
 
             }).then((results) => {
