--- a/views/forget_username.handlebars
+++ b/views/forget_username.handlebars
@@ -13,9 +13,33 @@
 
 <body>
 
-    <div class="container mx-auto">
+<div class="container mx-auto">
+    <div class="pos-f-t">
+        <div class="collapse" id="navbarToggleExternalContent">
+            <div class=" p-4">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link text-white" href='/about'>About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/register">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/contact">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
         <nav class="navbar navbar-expand-lg text-white navbar-dark">
             <a class="navbar-brand" href="/login">Trade Ninja</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
+                aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item ">
@@ -33,13 +57,14 @@
                 </ul>
             </div>
         </nav>
+
     </div>
 
 
 
     <h1 class="my-5 mx-auto text-center">Recover your username</h1>
 
-    <div class="container col-4">
+    <div class="container">
         <form id="user_name-recovery">
             <div class="form-group">
                 <label for='email'>Please enter your email address below.</label>
