--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,8 +14,32 @@
 <body>
 
     <div class="container mx-auto">
+        <div class="pos-f-t">
+            <div class="collapse" id="navbarToggleExternalContent">
+                <div class=" p-4">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item ">
+                            <a class="nav-link text-white" href='/about'>About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/register">Sign Up</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/contact">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+         
         <nav class="navbar navbar-expand-lg text-white navbar-dark">
             <a class="navbar-brand" href="/login">Trade Ninja</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
+                aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item ">
@@ -33,13 +57,15 @@
                 </ul>
             </div>
         </nav>
+        
     </div>
 
 
 
     <h1 class="my-5 mx-auto text-center">Login to begin</h1>
 
-    <div class="container col-4">
+
+    <div class="container">
         <form id="login">
             <div class="form-group">
                 <label for='username'>Username</label>
@@ -50,7 +76,7 @@
                 <input type="password" class="form-control" id="password">
             </div>
             <div class="containter">
-                <a class='reset float-left'href="./forget_username">Forgot Username?</a>
+                <a class='reset float-left' href="./forget_username">Forgot Username?</a>
                 <a class='reset float-right' href="./forget_password">Password Reset</a>
             </div>
             <button style="width: 100%" id='submit' type="submit" class="btn btn-primary my-4">Ninja Log</button>
@@ -111,7 +137,7 @@
                 }
 
                 if (results === "Login Successful!") {
-                  
+
                     $("#alert-space").html(`<div class="spinner-border text-danger" role="status"><span class="sr-only"></span></div>`)
                     setTimeout(() => {
                         window.location = "/dashboard"
